adding a clone status check api
